--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,7 @@ coverage
 # Benchmarking
 benchmarks/graphs
 
+
 # ignore additional files using core.excludesFile
 # https://git-scm.com/docs/gitignore
+.env
