--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "envalid": "^8.0.0",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
+    "mongodb": "^6.6.2",
+    "mongoose": "^8.4.0",
     "tslib": "^2.6.2"
   },
   "devDependencies": {
