--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "helmet": "^7.1.0",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
-    "tslib": "^2.6.2"
+    "tslib": "^2.6.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
