--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
       "@/*": ["*"]
     }
   },
-  "include": ["src//*.ts", "src//*.json", ".env"],
-  "exclude": ["node_modules", "src/http", "src/logs", "src/tests"]
+  "include": ["**/*.ts", "src//*.json", ".env"],
+  "exclude": ["node_modules", "build", "dist"]
 }
