--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Cleber Henrique",
   "main": "dist/index.js",
   "scripts": {
-    "presetup": "npm install",
+    "presetup": "npm install && husky",
     "dev": "nodemon",
     "start": "npm run build && cross-env NODE_ENV=production node dist/index.js",
     "build": "tsc && tsc-alias",
@@ -26,11 +26,16 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
+    "@commitlint/cz-commitlint": "^19.2.0",
+    "@commitlint/prompt-cli": "^19.3.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/helmet": "^4.0.0",
     "@types/node": "^20.12.12",
     "cross-env": "^7.0.3",
+    "husky": "^9.0.11",
     "nodemon": "^3.1.0",
     "standard-version": "^9.5.0",
     "ts-node": "^10.9.2",
