--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon",
     "start": "npm run build && cross-env NODE_ENV=production node dist/index.js",
     "build": "tsc && tsc-alias",
-    "release": "standard-version"
+    "release": "standard-version",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "keywords": [],
   "license": "ISC",
@@ -34,9 +35,14 @@
     "@types/express": "^4.17.21",
     "@types/helmet": "^4.0.0",
     "@types/node": "^20.12.12",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
     "cross-env": "^7.0.3",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
     "nodemon": "^3.1.0",
+    "prettier": "^3.2.5",
     "standard-version": "^9.5.0",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.10",
