--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "start": "npm run build && cross-env NODE_ENV=production node dist/index.js",
     "build": "tsc && tsc-alias",
     "release": "standard-version",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test": "jest --detectOpenHandles",
+    "test:watch": "jest --watch --detectOpenHandles"
   },
   "keywords": [],
   "license": "ISC",
   "dependencies": {
+    "@types/jest": "^29.5.12",
     "body-parser": "^1.20.2",
     "chalk": "4.1.2",
     "cors": "^2.8.5",
@@ -21,8 +24,10 @@
     "envalid": "^8.0.0",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
+    "jest": "^29.7.0",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
+    "ts-jest": "^29.1.2",
     "tslib": "^2.6.2",
     "uuid": "^9.0.1"
   },
